tests/paczka1/small_fuzzy/97577522.err
Error in line 2: A54 S814 53,4
Error in line 8: mLqQAKhx4aC S411 62,1
